# Moddy

./: .flake8  .gitignore  Dockerfile  README.md  detect-file-change.py  pyproject.toml  requirements.txt
mod-bot/: logger.py  main.py
moddy/: __main__.py  bot.py  datastructures.py  decoraters.py  embeds.py  limit_guilds.py  logger.py  main.py  proxy.py  utils.py
moddy/cogs/: developer.py  dictionary.py  emoji.py  eval.py  general.py  github.py  google.py  message_webhooks.py  quiz.py
moddy/database/: database.py  get_data.py  models.py
moddy/utils/: db.py  discord.py  embed.py  misc.py
