[tool.poetry]
name = "discord-mod"
version = "0.1.0"
description = "discord mod bot for a personal server"
authors = ["Anupama Dissanayake <61502343+Anu2001dev@users.noreply.github.com >"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.7.3"
Colr = "^0.9.1"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
lxml = "^4.9.1"
rich = "^10.4.0"
motor = "^2.4.0"
pydantic = "^1.8.2"
aiohttp-socks = "^0.6.0"
watchdog = "^2.1.5"
gidgethub = "^5.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.910"
pylint = "^2.8.3"
"discord.py-stubs" = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
